--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,5 @@
 [tool.pytest.ini_options]
+filterwarnings = "ignore::DeprecationWarning"
 log_cli = true
 addopts = ["--import-mode=importlib"]
 pythonpath = ["src"]
